# PaddleCppAPITest

./: .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  env_and_run.sh
.claude/skills/compat-doc-authoring/: SKILL.md
.claude/skills/compatibility-testing/: SKILL.md
.claude/skills/cpp-api-compatible/: SKILL.md
.claude/skills/fix-compat-api/: SKILL.md
.comate/rules/: skill.mdr
.github/skills/add-compat-api/: SKILL.md
.github/skills/add-compat-api/references/: Step3-1.md  Step3-2.md  Step3.md
.github/skills/compat-doc-authoring/: SKILL.md
.github/workflows/: codestyle-check.yml  compile-test.yml
cmake/: build.cmake  ccache.cmake  external.cmake
coverage/: analyze_api.sh  analyze_api_coverage.py  coverage.sh  generate_html_report.sh
doc/: PaddleTensor.md  TorchTensor.md  allocator.md  api_diff.md  cuda_blas.md  cuda_context_light.md  cuda_functions.md  cuda_stream.md  dispatch_key_set.md  generator.md  intrusive_ptr.md  layout.md  mismatch_api_record.md  op_math_type.md  philox.md  storage.md  storage_compat_arch.md  stream.md  tensor_accessor.md  tensor_base.md  tensor_body.md  type_index.md  type_meta.md
doc/ATen/: mismatch_api_record.md
doc/ATen/core/: generator.md  mismatch_api_record.md  tensor_body.md
doc/ATen/cuda/: cuda_blas.md  cuda_context_light.md  mismatch_api_record.md  philox.md
doc/ATen/ops/: as_strided.md  mismatch_api_record.md  resize.md
doc/c10/core/: allocator.md  allocator_compat_arch.md  data_ptr_compat_arch.md  device.md  device_type.md  event.md  layout.md  mismatch_api_record.md  storage.md  storage_compat_arch.md  stream.md  stream_compat_arch.md
doc/c10/cuda/: cuda_guard.md  cuda_stream.md  mismatch_api_record.md
doc/c10/util/: mismatch_api_record.md
doc/c10/util/typeid/: README.md  is_paddle_fundamental.md  type_meta_data.md  uninitialized.md
doc/typeid/: README.md  guard_long_unique_dummy.md  is_paddle_fundamental.md  type_identifier.md  type_meta.md  type_meta_data.md  uninitialized.md
resize_repro/: resize_repro.cpp  run_test.py  setup.py
src/: file_manager.cpp  file_manager.h  main.cpp
test/: AccumulateTypeTest.cpp  AllocatorCompatTest.cpp  AllocatorTest.cpp  ArrayRefTest.cpp  CUDADataTypeTest.cpp  CUDATest2.cpp  DefaultDtypeTest.cpp  DeviceGuardTest.cpp  DeviceTest.cpp  EmptyOpsTest.cpp  EventTest.cpp  ExceptionTest.cpp  GeneratorTest.cpp  HalfBFloat16Test.cpp  IValueTest.cpp  IndexingTest.cpp  LayoutMemoryFormatTest.cpp  LayoutTest.cpp  LibraryTest.cpp  ListTest.cpp  OptionalArrayRefTest.cpp  PythonCompatTest.cpp  PythonTest.cpp  RangeUtilsTest.cpp  ScalarTest.cpp  ScalarTypeTest.cpp  StorageTest.cpp  StreamTest.cpp  TensorAccessorTest.cpp  TensorOptionsTest.cpp  TensorTest.cpp  TensorTest_compare.cpp  TensorUtilTest.cpp  TorchCudaTest.cpp  result_cmp.sh  unmatch_AllocatorTest.cpp  unmatch_CUDAContextTest.cpp  unmatch_DeviceTest.cpp  unmatch_EventTest.cpp  unmatch_IValueTest.cpp  (+3 more)
test/ATen/: AccumulateTypeTest.cpp  DeviceGuardTest.cpp  IndexingTest.cpp  UtilsTest.cpp  unmatch_UtilsTest.cpp
test/ATen/core/: IValueTest.cpp  JitTypeBaseTest.cpp  LayoutTest.cpp  TensorAccessorTest.cpp  TensorTest.cpp  TensorTest_compare.cpp  TensorUtilTest.cpp
test/ATen/cuda/: CUDABlasTest.cpp  CUDAContextTest.cpp  CUDADataTypeTest.cpp  GeneratorTest.cpp  unmatch_CUDAContextTest.cpp
test/ATen/native/: RangeUtilsTest.cpp
test/ATen/ops/: AbsTest.cpp  AllAndAllCloseTest.cpp  ArangeTest.cpp  CoalesceTest.cpp  ConnectionOpsTest.cpp  CreationOpsTest.cpp  DetachTest.cpp  EmptyOpsTest.cpp  EmptyStridedTest.cpp  EqualTest.cpp  EyeTest.cpp  FlattenTest.cpp  FromBlobTest.cpp  IndexPutTest.cpp  IndexTest.cpp  ItemTest.cpp  MiscTensorTest.cpp  NarrowTest.cpp  PermuteTest.cpp  ReciprocalTest.cpp  ReshapeTest.cpp  SelectTest.cpp  SliceTest.cpp  SparseTensorExtraTest.cpp  SparseTensorTest.cpp  SplitTest.cpp  SqueezeTest.cpp  StdTest.cpp  SumTest.cpp  TTest.cpp  TViewAsTest.cpp  TensorFactoryTest.cpp  TensorPtrTest.cpp  ToTest.cpp  TransposeTest.cpp  UnsqueezeTest.cpp  ViewAsTest.cpp  ViewTest.cpp
test/c10/core/: AllocatorCompatTest.cpp  DefaultDtypeTest.cpp  DeviceTest.cpp  DeviceTypeTest.cpp  DispatchKeySetTest.cpp  DispatchKeyTest.cpp  EventCompatTest.cpp  LayoutMemoryFormatTest.cpp  ListTest.cpp  ScalarTest.cpp  ScalarTypeFunctionsTest.cpp  ScalarTypeTest.cpp  StorageTest.cpp  TensorOptionsTest.cpp  unmatch_AllocatorTest.cpp  unmatch_EventTest.cpp
test/c10/cuda/: CUDATest2.cpp  RecordStreamTest.cpp  StreamTest.cpp
test/c10/util/: ArrayRefTest.cpp  ExceptionTest.cpp  HalfBFloat16Test.cpp  OptionalArrayRefTest.cpp
test/ops/: AbsTest.cpp  AllAndAllCloseTest.cpp  ArangeTest.cpp  CUDABlasTest.cpp  ConnectionOpsTest.cpp  CreationOpsTest.cpp  DetachTest.cpp  EqualTest.cpp  EyeTest.cpp  FlattenTest.cpp  FromBlobTest.cpp  IndexPutTest.cpp  IndexTest.cpp  MiscTensorTest.cpp  NarrowTest.cpp  ReciprocalTest.cpp  ReshapeTest.cpp  SelectTest.cpp  SliceTest.cpp  SparseTensorExtraTest.cpp  SparseTensorTest.cpp  SplitTest.cpp  SqueezeTest.cpp  StdTest.cpp  SumTest.cpp  TViewAsTest.cpp  TensorFactoryTest.cpp  TensorPtrTest.cpp  TransposeTest.cpp  UnsqueezeTest.cpp  ViewTest.cpp  unmatch_IndexTest.cpp
test/torch/: LibraryTest.cpp
test/torch/csrc/api/include/torch/: PythonCompatTest.cpp  TorchCudaTest.cpp  unmatch_PythonTest.cpp
tools/codestyle/: clang_format.sh
